--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "sass": "^1.63.4",
     "vue": "^3.2.47"
   },
   "devDependencies": {
